fix: user name cut off with emoji and state icon

--- a/app/style/components/user-profile.less
+++ b/app/style/components/user-profile.less
@@ -135,7 +135,7 @@ user-profile {
   .availability-state-label {
     .label-bold-xs();
     display: inline-block;
-    height: 12px;
+    line-height: 12px;
   }
 }
 
